# 0xC

./: .gitignore  .psqlrc  Cargo.toml  install-nix.sh  move.sh  setup.sh  test.sh  tmux.conf  update.sh
nvim/: TODO.txt  init.lua
nvim/lua/: lazy-setup.lua  map.lua  set.lua
nvim/lua/plugins/: auto-save.lua  bufferline.lua  cmp.lua  color.lua  flash.lua  flutter-tools.lua  gitsign.lua  harpoon.lua  lsp.lua  navbuddy.lua  navic.lua  neotree.lua  surround.lua  telescope.lua  treesitter.lua  ultimate-autopair.lua  undotree.lua
src/: lib.rs  main.rs
src/adapters/: fs_notify.rs  mod.rs  neovim.rs
src/core/: mod.rs  nvim_session.rs  watch_changed_files_use_case.rs
src/ports/: mod.rs
